# radar-empresarial

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: cnpj_arquivos.csv  pgfn_periodos.csv
docs/: dicionario_abt_completa.md  dicionario_modelo1.md  dicionario_modelo2.md
notebooks/: 05_validacao_eda_pgfn.ipynb  05_validate_eda_pgfn.ipynb  06_build_abt_pgfn_2024_2025.ipynb  explicacao_desafio.ipynb
reports/: cnpj_abt_head_20260109.csv  cnpj_abt_schema_20260109.csv  cnpj_etapa5_summary_20260109.txt  cnpj_etapa6_summary_20260109.txt  cnpj_head_eda_20260109.csv  cnpj_info_20260109.txt  cnpj_keycheck_20260109.txt  cnpj_schema_20260109.csv  manifest_pgfn_20260106.csv  pgfn_abt_dict_decisions_20260108.csv  pgfn_etapa5_summary_20260108.txt  pgfn_etapa6_summary_20260108.txt  pgfn_head_20260107.csv  pgfn_info_20260108.txt  pgfn_profile_20260107.txt  pgfn_tabela_decisao_20260108.csv
reports/model1/: model1_dataset_summary_20260109.txt  model1_metrics_20260109.txt  (+1 more)
src/: 01_ingest_pgfn.py  02_ingest_cnpj.py  03_extract_cnpj_2025_12.py  03_extract_pgfn.py  04_transform_cnpj_2025_12.py  04_transform_pgfn.py  04_transform_pgfn_2024_2025.py  04a_build_empresas_lookup_2025_12.py  04b_build_estabelecimentos_core_2025_12.py  04c_join_cnpj_core_2025_12_duckdb.py  05_validate_eda_cnpj.py  05_validate_eda_pgfn.py  06_build_abt_cnpj_2025_12.py  06_build_abt_pgfn_2024_2025.py  06b_def_build_abt_cnpj_2025_12_streaming.py  09_train_model1_logistica.py  11_build_model2_dataset_pgfn_cnpj.py  13d_score_model2_interativo.py  14_cli_consulta_cnpj.py
(+36 files in other folders)
