[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pgfn-cnpj"
version = "0.1.0"
description = "Pipeline de integração de dados públicos da PGFN e do CNPJ para análise de risco empresarial."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Glaucio Rosa" }
]
dependencies = [
    "duckdb>=1.0",
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "requests>=2.31",
    "scikit-learn>=1.8"
]

[project.scripts]
pgfn-cnpj = "pgfn_cnpj.cli.main:main"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
